2015-01-08  Corinna Vinschen  <vinschen@redhat.com>

	* libc/time/strftime.c (__strftime): Utilize __TM_GMTOFF and __TM_ZONE
	on systems where available.  On Cygwin, call function to get values.
	Add comment to explain why.  Drop TZ_LOCK/TZ_UNLOCK in 'z' case since
	it's not necessary.  In 'Z' case, add a comment to document a potential
	codeset problem.

2015-01-08  Renlin Li  <renlin.li@arm.com>

	* testsuite/newlib.wctype/twctrans.c (main): Use towlower and towupper.

2015-01-06  Richard Earnshaw  <rearnsha@arm.com>

	* libc/machine/aarch64/strcpy.S (strcpy): Further performance
	improvements.  Adjust to allow building as stpcpy.
	* libc/machine/aarch64/stpcpy.S: New file.
	* libc/machine/aarch64/stpcpy-stub.c: New file.
	* libc/machine/aarch64/Makefile.am (lib_a_SOURCES): Build stpcpy.
	* libc/machine/aarch64/Makefile.in: Regenerated.

2014-12-26  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/include/sys/features.h: update newlib version and copyright year

2014-12-18  Jeff Johnston  <jjohnstn@redhat.com>

        * NEWS: Update with 2.2.0 info.
        * README: Ditto.
        * acinclude.m4: Change version number to 2.2.0.
        * libc/libc.texinfo: Ditto.
        * libm/libm.texinfo: Ditto.
        * configure: Regenerated.
        * Makefile.in: Regenerated.
        * doc/configure: Ditto.
        * libc/*/configure: Ditto.
        * libm/*/configure: Ditto.
        * libc/sys/linux/shared.ld: Add VERS_2.2

2014-12-18  Yaakov Selkowitz  <yselkowi@redhat.com>

	Implement BSD/GNU unlocked stdio extensions.
	* libc/include/stdio.h (clearerr_unlocked, feof_unlocked,
	ferror_unlocked, fflush_unlocked, fgetc_unlocked, fgets_unlocked,
	fileno_unlocked, fputc_unlocked, fputs_unlocked, fread_unlocked,
	fwrite_unlocked): Declare.
	* libc/include/wchar.h (fgetwc_unlocked, fgetws_unlocked,
	fputwc_unlocked, fputws_unlocked, getwc_unlocked, getwchar_unlocked,
	putwc_unlocked, putwchar_unlocked): Declare.
	* libc/stdio/Makefile.am (ELIX_4_SOURCES): Add clearerr_u.c,